--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,48 @@
-html,
-pop-up img {
-    width: 1px; 
+body {
+    margin: 0;
+    font-family: sans-serif;
+  }
+  
+  .pop-up {
+    text-align: left;
+    padding: 20px;
+    position: relative;
+  }
+  
+  .logo {
+    width: 2500px;
     display: block;
-    margin: 50px;
-}
+    margin: 0 auto;
+    transform-origin: top left;
+    transition: transform 0.1s linear;
+    position: relative;
+    z-index: 100;
+  }
+  
+  .pop-up .comp {
+    text-align: left;
+    padding: 200px 0px;
+    text-size-adjust: 400px;
+    z-index: 10;
+  }
+  
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: rgba(255,255,255,0.1);
+    display: flex;
+    justify-content: flex-end;
+    align-items: left;
+    padding: 0 20px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    z-index: 999;
+  }
+
+  .main .cont {
+    text-size-adjust: 400px;
+    padding: 0px 20px;
+  }
+  
