--- a/css/base.css
+++ b/css/base.css
@@ -1,8 +1,4 @@
-body {
-    margin: 0;
-    font-family: sans-serif;
-  }
-  
+
   .pop-up {
     text-align: left;
     padding: 20px;
@@ -10,7 +6,26 @@ body {
   }
   
   .logo {
-    width: 2500px;
+    width: 2800px;
+    display: block;
+    margin: 0 auto;
+    transform-origin: top left;
+    transition: transform 0.1s linear;
+    position: relative;
+    z-index: 100;
+  } 
+     .spacer {
+    width: 1300px;
+    display: block;
+    margin: 0 auto;
+    transform-origin: top left;
+    transition: transform 0.1s linear;
+    position: relative;
+    z-index: 10;
+  }
+
+    .landscape {
+    width: 800px;
     display: block;
     margin: 0 auto;
     transform-origin: top left;
@@ -32,7 +47,7 @@ body {
     left: 0;
     width: 100%;
     height: 60px;
-    background: rgba(255,255,255,0.1);
+    background: rgb(255, 255, 255);
     display: flex;
     justify-content: flex-end;
     align-items: left;
@@ -45,4 +60,109 @@ body {
     text-size-adjust: 400px;
     padding: 0px 20px;
   }
+
+  * {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+  background: #ffffff;
+  display: flex-start;
+  justify-content: left;
+  align-items: center;
+  height: 170vh;
+  padding: 15px;
+}
+
+.slider {
+  position: relative;
+  width: 1800px;
+  height: 450px;
+  overflow: hidden;
+  border-radius: 0px;
+  padding-left: 30 px;
+}
+
+.slides {
+  display: flex;
+  gap: 20px; 
+  transition: transform 0.5s ease;
+    padding-left: 150px;
+  
+}
+
+.slide {
+  flex: 0 0 40%;
+  overflow: hidden;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* raise the first carousel’s buttons slightly */
+.top-slider .prev,
+.top-slider .next {
+  top: 85%;  /* move buttons up */
+}
+
+/* lower the second carousel’s buttons slightly */
+.bottom-slider .prev,
+.bottom-slider .next {
+  top: 85%;  /* move buttons down */
+}
+
+.prev, .next {
+  position: absolute;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  cursor: pointer;
+  font-size: 2rem;
+  padding: 8px 12px;
+    margin-right: 5px; 
+    border-radius: 90px;
+
+  transition: 0.3s;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgba(255, 255, 255, 0.466);
+  border-radius: 90px;
+}
+
+.prev {
+  left: 15px;
+}
+
+.next {
+  left: 65px; /* adjust based on prev width + margin */
+}
+
+.footer {
+  width: 200%;
+  background-color: #037179; /* gray block */
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 60px 20px;
+  text-align: left;
+  margin-top: 50px;
+}
+
+.footer h2 {
+  margin-bottom: 0px;
+  font-size: 1.8rem;
+}
+
+.footer p {
+  margin: 8px 0;
+  font-size: 1.1rem;
+  opacity: 0.9;
+}
+
+
+
   
